CMF 2.1.2-beta (unreleased)

  Bug Fixes

    - CMFDefault DiscussionItem: Fixed indexing of 'in_reply_to'.

    - CMFUid.testing: Base UidEventZCMLLayer on ZopeTestCase.layer.ZopeLite.

    - CMFUid.UniqueIdHandlerTool: Use %r instead of %s in error messages, so
      we don't trip over non-ASCII representations (e.g. File and Image).


CMF 2.1.1 (2008/01/06)

  Bug Fixes

    - CMFDefault.PropertiesTool: Fix a faulty manage_changeProperties
      invocation which broke the 'Reconfigure Portal' screen
      (https://bugs.launchpad.net/zope-cmf/+bug/174246)


CMF 2.1.1-beta (2007/12/29)

  Bug Fixes

    - CMFActionIcons profiles: Fixed dependency in import_steps.xml.

    - CMFDefault profiles: Fixed some dependencies in import_steps.xml.

    - DCWorkflow.exportimport: Scripts with invalid types imported
      after scripts with valid types will no longer place the valid
      script twice.  Scripts can also now be specified with meta_types
      other than the hard-coded meta_types.

    - CMFDefault.utils: The email validation would reject addresses where
      the domain part started with a single letter element.
      (http://www.zope.org/Collectors/CMF/495)

    - CMFDefault skins: Prevented the getMainGlobals script to fail if not
      content-type header is set.

    - AfterTransitionEvent now passes along the new status of the object, just
      as StateChangeInfo passes on the new status to after-transition scripts.
      (http://www.zope.org/Collectors/CMF/490)

  Other

    - Updated to the 0.3 release of five.localsitemanager.

    - Testing: Derive test layers from ZopeLite layer if available.

  See also CMFCore/CHANGES.txt.


CMF 2.1.0 (2007/08/08)

  New Features

    - PortalFolder: Enabled 'Components' ZMI tab.
      This GenericSetup tab allows to inspect and edit component registrations. 

  Bug Fixes

    - Fixed all componentregistry.xml files to use plain object paths and strip